--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-bootstrap-carousel": "^1.0.4",
     "react-document-title": "^2.0.2",
     "react-dom": "^15.4.2",
+    "react-grid-gallery": "^0.3.3",
+    "react-images": "^0.5.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-stormpath": "^2.0.0",
