--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.31.0",
     "react-bootstrap-carousel": "^1.0.4",
+    "react-darkroom": "^0.3.7",
     "react-document-title": "^2.0.2",
     "react-dom": "^15.4.2",
     "react-droppie": "^1.1.4",
