--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express-stormpath": "^3.2.0",
     "fastclick": "^1.0.6",
     "file-loader": "^0.10.1",
-    "history": "^4.5.1",
+    "history": "^4.6.1",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.17.2",
     "normalizr": "^3.2.2",
@@ -39,6 +39,7 @@
     "react-images": "^0.5.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
     "react-stormpath": "^2.0.0",
     "react-stripe-checkout": "^2.2.5",
     "react-tabs": "^0.8.2",
