--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-loader": "^0.10.1",
     "history": "^4.6.1",
     "isomorphic-fetch": "^2.2.1",
+    "json-loader": "^0.5.4",
     "material-ui": "^0.17.2",
     "normalizr": "^3.2.2",
     "pui-react-dropdowns": "^8.0.5",
@@ -50,6 +51,7 @@
     "webpack": "^2.2.1"
   },
   "devDependencies": {
+    "image-webpack-loader": "^3.3.1",
     "svg-react-loader": "^0.3.7",
     "url-loader": "^0.5.8",
     "webpack-dev-middleware": "^1.10.1"
