--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-runtime": "^6.23.0",
     "body-parser": "^1.16.1",
+    "css-loader": "^0.28.2",
     "express": "^4.14.1",
     "express-stormpath": "^3.2.0",
     "fastclick": "^1.0.6",
     "file-loader": "^0.10.1",
     "history": "^4.6.1",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.2.1",
     "json-loader": "^0.5.4",
+    "lodash": "^4.17.4",
     "material-ui": "^0.17.2",
     "normalizr": "^3.2.2",
     "pui-react-dropdowns": "^8.0.5",
@@ -38,6 +41,7 @@
     "react-droppie": "^1.1.4",
     "react-grid-gallery": "^0.3.3",
     "react-images": "^0.5.2",
+    "react-images-uploader": "^1.0.1",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
@@ -45,9 +49,11 @@
     "react-stripe-checkout": "^2.2.5",
     "react-tabs": "^0.8.2",
     "react-tap-event-plugin": "^2.0.1",
+    "react-upload-file": "^2.0.0-beta.6",
     "redux": "^3.6.0",
     "redux-form": "^6.6.1",
     "redux-thunk": "^2.2.0",
+    "style-loader": "^0.18.1",
     "webpack": "^2.2.1"
   },
   "devDependencies": {
