--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "history": "^4.6.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.1.4",
     "json-loader": "^0.5.4",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.2",
+    "moment": "^2.18.1",
     "normalizr": "^3.2.2",
     "pui-react-dropdowns": "^8.0.5",
     "react": "^15.4.2",
